languagechooser (1.12) UNRELEASED; urgency=low

  * Christian Perrier
    - change the (currently commented) line for Esperanto to use
      eo_XX as locale (will probably soon be valid, see #233308)
  * Joey Hess
    - Add a prebaseconfig progress template.
  
  * Changwoo Ryu
    - Updated Korean translation in langaugelist and langaugelist.l10n.
  * Translations
    - Eugeniy Meshcheryakov, update Ukrainian translation in languagelist.l10n

 -- Christian Perrier <bubulle@debian.org>  Thu, 19 Feb 2004 17:40:08 +0100

languagechooser (1.11) unstable; urgency=low

  *  Translations
    - Giuseppe Sacco, update italian translation in languagelist.l10n
    - Dennis Stampfer, update German translation in languagelist.l10n
    - Andre Dahlqvist, update Swedish translation in languagelist.l10n
    - Lior Kaplan, added Hebrew translation in languagelist.l10n
    - Kęstutis Biliūnas, updated Lithuanian translation in
      languagelist.l10n and updated landuagelist.
  * Joey Hess
    - Fix Arabic display.
  * Matt Kraai
    - Queue bterm-unifont for installation if the language is ar, bg, el,
      he, ja, ko, ru, tr, uk, or zh.
  * Christian Perrier
    - Changed the Chinese language handling : Traditional and Simplified
      come back : both trigger countrychooser. Interesting side effect :
      each variant will become a fallback value for the other variant

 -- Christian Perrier <bubulle@debian.org>  Wed, 18 Feb 2004 15:55:45 +0100

languagechooser (1.10) unstable; urgency=low

  * Joey Hess
    - Lowercase "Other" and "Other countries".
    - Don't warn about locales with no _ (type 1; locale completed by
      countrychooser)
    - Fix indent before "-" for type 2 locales.
    - Order type 2 locales after type 3 locales, so "other" comes last.

 -- Joey Hess <joeyh@debian.org>  Sun,  8 Feb 2004 19:44:22 -0500

languagechooser (1.09) unstable; urgency=low

  * Christian Perrier
    - Added language list for Chinese. Otherwise, Chinese messages