@@ -5,6 +5,8 @@ languagechooser (1.12) UNRELEASED; urgency=low
       eo_XX as locale (will probably soon be valid, see #233308)
   * Joey Hess
     - Add a prebaseconfig progress template.
+    - Update to debhelper v4 and use its new udeb support.
+    - Build package in binary-indep, not binary-arch, it is arch all.
   
   * Changwoo Ryu
     - Updated Korean translation in langaugelist and langaugelist.l10n.
